Mobile First Patterns: Fix heading color and spacing issues caused by changes to mobile first template

--- a/resources/gato-component-patterns/css/insettextimage.scss
+++ b/resources/gato-component-patterns/css/insettextimage.scss
@@ -139,56 +139,56 @@ $insetwidth:    4rem;
         &.color1 {
           background-color: $mc1-bg;
           color: $mc1-text;
-          a {
+          a, h2 {
             color: $mc1-text;
           }
         }
         &.color2 {
           background-color: $mc2-bg;
           color: $mc2-text;
-          a {
+          a, h2 {
             color: $mc2-text;
           }
         }
         &.color3 {
           background-color: $mc3-bg;
           color: $mc3-text;
-          a {
+          a, h2 {
             color: $mc3-text;
           }
         }
         &.color4 {
           background-color: $mc4-bg;
           color: $mc4-text;
-          a {
+          a, h2 {
             color: $mc4-text;
           }
         }
         &.color5 {
           background-color: $mc5-bg;
           color: $mc5-text;
-          a {
+          a, h2 {
             color: $mc5-text;
           }
         }
         &.color6 {
           background-color: $mc6-bg;
           color: $mc6-text;
-          a {
+          a, h2 {
             color: $mc6-text;
           }
         }
         &.color7 {
           background-color: $mc7-bg;
           color: $mc7-text;
-          a {
+          a, h2 {
             color: $mc7-text;
           }
         }
         &.color8 {
           background-color: $mc8-bg;
           color: $mc8-text;
-          a {
+          a, h2 {
             color: $mc8-text;
           }
         }
