--- a/resources/gato-template-mobilefirst/css/_pagesetup.scss
+++ b/resources/gato-template-mobilefirst/css/_pagesetup.scss
@@ -32,6 +32,10 @@ body {
   padding: 4rem 0rem;
 }
 
+.contentcolumn .gato-section-full.pattern {
+  padding: 0rem;
+}
+
 .gato-section-full .gato-section {
   margin-right: 0px;
 }
